@@ -5,7 +5,7 @@ Change history for Coverage.py
 3.6.1
 -----
 
-- Improved the branch coverage mechanism, fixing `issue 175`_.
+- Improved the branch coverage facility, fixing `issue 90`_ and `issue 175`_.
 
 - Running code with ``coverage run -m`` now behaves more like Python does,
   setting sys.path properly, which fixes `issue 207`_ and `issue 242`_.
@@ -18,6 +18,7 @@ Change history for Coverage.py
   a spurious warning about the trace function changing: "Trace function
   changed, measurement is likely wrong: None." This fixes `issue 164`_.
 
+.. _issue 92: https://bitbucket.org/ned/coveragepy/issue/92/finally-clauses-arent-treated-properly-in
 .. _issue 164: https://bitbucket.org/ned/coveragepy/issue/164/trace-function-changed-warning-when-using
 .. _issue 175: https://bitbucket.org/ned/coveragepy/issue/175/branch-coverage-gets-confused-in-certain
 .. _issue 207: https://bitbucket.org/ned/coveragepy/issue/207/run-m-cannot-find-module-or-package-in
